Fix: Fix sizings on smaller screens

--- a/src/components/General/IntroPage.module.css
+++ b/src/components/General/IntroPage.module.css
@@ -23,9 +23,12 @@
     font-weight: bold;
     text-transform: uppercase;
     color: #ffffffe8;
-    opacity: 0; /* Start invisible */
-    transform: translateY(50px); /* Start below */
-    animation: fadeInFromBelow 1.2s ease-out forwards; /* Animate in */
+    opacity: 0;
+    /* Start invisible */
+    transform: translateY(50px);
+    /* Start below */
+    animation: fadeInFromBelow 1.2s ease-out forwards;
+    /* Animate in */
 }
 
 @keyframes fadeInFromBelow {
@@ -33,6 +36,7 @@
         opacity: 0;
         transform: translateY(40px);
     }
+
     100% {
         opacity: 1;
         transform: translateY(0);
@@ -49,10 +53,14 @@
 .subsection {
     display: flex;
     align-items: center;
-    opacity: 0; /* Start invisible */
-    transform: translateX(10px); /* Start to the left */
-    animation: slideInFromLeft 1s ease-out forwards; /* Animate in */
-    animation-delay: 0.5s; /* Delay to create a staggered effect */
+    opacity: 0;
+    /* Start invisible */
+    transform: translateX(10px);
+    /* Start to the left */
+    animation: slideInFromLeft 1s ease-out forwards;
+    /* Animate in */
+    animation-delay: 0.5s;
+    /* Delay to create a staggered effect */
 }
 
 .subText {
@@ -66,7 +74,8 @@
     height: 100%;
     margin-right: 1rem;
     border-radius: 2px;
-    background-color: #FB923C; /* Ensure visibility */
+    background-color: #FB923C;
+    /* Ensure visibility */
 }
 
 @keyframes slideInFromLeft {
@@ -74,6 +83,7 @@
         opacity: 0;
         transform: translateY(100px);
     }
+
     100% {
         opacity: 1;
         transform: translateX(0);
@@ -81,7 +91,8 @@
 }
 
 .subsection:nth-child(1) {
-    animation-delay: 0.5s; /* Adjust delay for staggered effect */
+    animation-delay: 0.5s;
+    /* Adjust delay for staggered effect */
 }
 
 .subsection:nth-child(2) {
@@ -95,17 +106,22 @@
 @media (max-width: 640px) {
     .subsection {
         display: none;
-      }
+    }
 
-      .fullScreen {
-        align-items: center; /* Center items vertically */
-        justify-content: center; /* Center items horizontally */
-        padding: 0; /* Remove extra padding */
+    .fullScreen {
+        align-items: center;
+        /* Center items vertically */
+        justify-content: center;
+        /* Center items horizontally */
+        padding: 0;
+        /* Remove extra padding */
     }
 
     .mainText {
-        font-size: 20vw;
-        text-align: center; /* Center text horizontally */
-        transform: none; /* Reset transform for simplicity */
+        font-size: 17vw;
+        text-align: center;
+        /* Center text horizontally */
+        transform: none;
+        /* Reset transform for simplicity */
     }
 }
